--- a/example_map.html
+++ b/example_map.html
@@ -4,37 +4,8 @@
 <meta http-equiv="content-type" content="text/html; charset=UTF-8"/>
 <title>Google Maps - pygmaps </title>
 <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?libraries=visualization&sensor=true_or_false"></script>
-<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC-riBWDqa4oOwr2xm8o295zqyzQ18_aFk"
-  type="text/javascript"></script>
- <style>
- @import url(https://fonts.googleapis.com/css?family=Press+Start+2P);
- * {
-  box-sizing: border-box;
-}
-@mixin other( $width, $color, $bgcolor ) {
-  box-shadow:
-    4*$width 0 $bgcolor, 
-    -4*$width 0 $bgcolor, 
-    0 (-4*$width) $bgcolor, 
-    0 4*$width $bgcolor,
-    $width 0 0 2*$width $bgcolor,
-    -$width 0 0 2*$width $bgcolor,
-    0 (-$width) 0 2*$width $bgcolor,
-    0 $width 0 2*$width $bgcolor,
-    5*$width 0 $color, 
-    -5*$width 0 $color,
-    0 (-5*$width) $color, 
-    0 5*$width $color,
-    0 0 0 3*$width $color,
-    0 2*$width 0 2*$width $color,
-    0 (-2*$width) 0 2*$width $color,
-    2*$width 0 0 2*$width $color,
-    (-2*$width) 0 0 2*$width $color;
-    margin: 5*$width auto;
-}
- 
+ <style> 
  #floating-panel {
-  @include other( 4px, orange, white );
   position: absolute; 
   top: 10%; 
   left: 2%; 
@@ -42,16 +13,146 @@
   overflow: auto;
   width: 15%;
   height: 60%;
+  border: 20px groove #e3e3e3;
+  /*resize: both;*/
+  transition: all 0.5s;
 }
 
-input[type=checkbox] {
-	direction: ltr;
-	height: 16px;
+#blur {
+  background-size: cover;
+  overflow: hidden;
+  backdrop-filter:blur(10px);
+  position: absolute; 
+  top: 10%; 
+  left: 2%; 
+  width: 16%;
+  height: 63%;
+  transition: all 0.5s;
 }
+
+
+#minimize {
+	display:inline-block;
+	padding:0.35em 1.2em;
+	margin:0 0.3em 0.3em 0;
+	border:0.1em solid #FFFFFF;
+	border-radius:0.12em;
+	box-sizing: border-box;
+	text-decoration:none;
+	font-family:'Roboto',sans-serif;
+	font-weight:bold;
+	color:#FFFFFF;
+	text-align:center;
+	transition: all 0.3s;
+	position:absolute;
+    top:0;
+    right:0;
+	width: 60px;
+	height: 30px;
+	-webkit-backdrop-filter: blur(5px);
+	backdrop-filter: blur(5px);
+}
+
+.item {
+	display: block;
+}
+
+#minimize:hover{
+	color:#000000;
+	background-color:#FFFFFF;
+}
+
+.onoffswitch {
+    position: relative; width: 90px;
+    -webkit-user-select:none; -moz-user-select:none; -ms-user-select: none;
+}
+.onoffswitch-checkbox {
+    display: none;
+}
+.onoffswitch-label {
+    display: block; overflow: hidden; cursor: pointer;
+    border: 2px solid #999999; border-radius: 20px;
+}
+.onoffswitch-inner {
+    display: block; width: 200%; margin-left: -100%;
+    transition: margin 0.3s ease-in 0s;
+}
+.onoffswitch-inner:before, .onoffswitch-inner:after {
+    display: block; float: left; width: 50%; height: 30px; padding: 0; line-height: 30px;
+    font-size: 14px; color: white; font-family: Trebuchet, Arial, sans-serif; font-weight: bold;
+    box-sizing: border-box;
+}
+.onoffswitch-inner:before {
+    content: "ON";
+    padding-left: 10px;
+    background-color: #34A7C1; color: #FFFFFF;
+}
+.onoffswitch-inner:after {
+    content: "OFF";
+    padding-right: 10px;
+    background-color: #EEEEEE; color: #999999;
+    text-align: right;
+}
+.onoffswitch-switch {
+    display: block; width: 18px; margin: 6px;
+    background: #FFFFFF;
+    position: absolute; top: 0; bottom: 0;
+    right: 56px;
+    border: 2px solid #999999; border-radius: 20px;
+    transition: all 0.3s ease-in 0s; 
+}
+.onoffswitch-checkbox:checked + .onoffswitch-label .onoffswitch-inner {
+    margin-left: 0;
+}
+.onoffswitch-checkbox:checked + .onoffswitch-label .onoffswitch-switch {
+    right: 0px; 
+}
+
 </style>
 <script type="text/javascript">
 	var global_map;
 	var infowindow = null;
+	
+	function changeCheckboxDiv()
+	{
+		var div = document.getElementById('floating-panel');
+		var btn = document.getElementById('minimize');
+		var blur = document.getElementById('blur');
+		
+		if (btn.value == '-')
+		{
+			btn.value = "+";
+			setTimeout(function(){
+				div.style.transition = "all 0s";
+				blur.style.transition = "all 0s";
+			}, 500);
+			div.style.transition = "all 0.5s";
+			blur.style.transition = "all 0.5s";
+			div.style.height = "3.5%";
+			div.style.width = "4%";
+			div.style.border = "solid transparent";
+			div.style.overflow = "hidden";
+			blur.style.height = "0%";
+			blur.style.width = "0%";
+		}
+		else
+		{
+			setTimeout(function(){
+				div.style.transition = "all 0s";
+				blur.style.transition = "all 0s";
+			}, 500);
+			div.style.transition = "all 0.5s";
+			blur.style.transition = "all 0.5s";
+			btn.value = "-";
+			div.style.height = "60%";
+			div.style.width = "15%";
+			div.style.border = "20px groove #e3e3e3";
+			div.style.overflow = "auto";
+			blur.style.width = "16%";
+			blur.style.height = "63%";
+		}
+		
+	}
 	function initialize() {
 		var centerlatlng = new google.maps.LatLng(37.090240, -95.712891);
 		var myOptions = {
@@ -709,10 +810,6 @@ input[type=checkbox] {
 		});
 		marker.setMap(map);
 		marker.addListener('click', this.get_title);
-		
-		document.getElementById('checkboxes').innerHTML += 
-		'<input type="checkbox" checked="checked" onclick="checkboxChanged(' + 0 + ', this.checked);"> ' + 'spaghed' + '<br>';
-
 	}
 	
 	function get_title(evt)
@@ -733,32 +830,26 @@ input[type=checkbox] {
 <body style="margin:0px; padding:0px;" onload="initialize()">
 	<div id="wrapper">
 		<div id="map_canvas" style="width: 100%; height: 100%;"></div>
-		<div id="floating-panel">
-			<input type="checkbox" name="vehicle" value="Bike"> I have a bikeI have a bikeI have a bikeI have a bikeI have a bikeI have a bikeI have a bikeI have a bike<br><br>
-			<input type="checkbox" name="vehicle" value="Bike"> I have a bike<br><br>
-			<input type="checkbox" name="vehicle" value="Bike"> I have a bike<br><br>
-			<input type="checkbox" name="vehicle" value="Bike"> I have a bike<br><br>
-			<input type="checkbox" name="vehicle" value="Bike"> I have a bike<br><br>
-			<input type="checkbox" name="vehicle" value="Bike"> I have a bike<br><br>
-			<input type="checkbox" name="vehicle" value="Bike"> I have a bike<br><br>
-			<input type="checkbox" name="vehicle" value="Bike"> I have a bike<br><br>
-			<input type="checkbox" name="vehicle" value="Bike"> I have a bike<br><br>
-			<input type="checkbox" name="vehicle" value="Bike"> I have a bike<br><br>
-			<input type="checkbox" name="vehicle" value="Bike"> I have a bike<br><br>
-			<input type="checkbox" name="vehicle" value="Bike"> I have a bike<br><br>
-			<input type="checkbox" name="vehicle" value="Bike"> I have a bike<br><br>
-			<input type="checkbox" name="vehicle" value="Bike"> I have a bike<br><br>
-			<input type="checkbox" name="vehicle" value="Bike"> I have a bike<br><br>
-			<input type="checkbox" name="vehicle" value="Bike"> I have a bike<br><br>
-			<input type="checkbox" name="vehicle" value="Bike"> I have a bike<br><br>
-			<input type="checkbox" name="vehicle" value="Bike"> I have a bike<br><br>
-			<input type="checkbox" name="vehicle" value="Bike"> I have a bike<br><br>
-			<input type="checkbox" name="vehicle" value="Bike"> I have a bike<br><br>
-			<input type="checkbox" name="vehicle" value="Bike"> I have a bike<br><br>
-			<input type="checkbox" name="vehicle" value="Bike"> I have a bike<br><br>
-			<input type="checkbox" name="vehicle" value="Bike"> I have a bike<br><br>
-			<input type="checkbox" name="vehicle" value="Bike"> I have a bike<br><br>
-			<input type="checkbox" name="vehicle" value="Bike"> I have a bike<br><br>
+		<div id="blur"></div>
+		<div id="floating-panel" class="resizable">
+			<input id="minimize" type="button" value="-" onclick="changeCheckboxDiv()"><br><br>
+			
+			<div class="onoffswitch">
+				<input type="checkbox" name="onoffswitch" class="onoffswitch-checkbox" id="myonoffswitch" checked>
+				<label class="onoffswitch-label" for="myonoffswitch">
+					<span class="onoffswitch-inner"></span>
+					<span class="onoffswitch-switch"></span>
+				</label>
+			</div><br>
+			
+			<div class="onoffswitch">
+				<input type="checkbox" name="onoffswitch" class="onoffswitch-checkbox" id="myonoffswitch2" checked>
+				<label class="onoffswitch-label" for="myonoffswitch2">
+					<span class="onoffswitch-inner"></span>
+					<span class="onoffswitch-switch"></span>
+				</label>
+			</div>
+			hi
 		</div>
 	</div>
 	
