--- a/example_map.html
+++ b/example_map.html
@@ -18,6 +18,48 @@
   transition: all 0.5s;
 }
 
+progress {
+  border: 0;
+  background: #eee;
+  border-radius: 100px;
+  position: absolute;
+  top: 47.5%;
+  left: 30%;
+  width: 40%;
+  height: 5%;
+}
+
+progress::-moz-progress-bar {
+  border-radius: 100px;
+  background-image:
+	   -webkit-linear-gradient(-45deg, 
+	                           transparent 33%, rgba(0, 0, 0, .1) 33%, 
+	                           rgba(0,0, 0, .1) 66%, transparent 66%),
+	   -webkit-linear-gradient(top, 
+	                           rgba(255, 255, 255, .25), 
+	                           rgba(0, 0, 0, .25)),
+	   -webkit-linear-gradient(left, #09c, #f44)
+}
+
+progress::-webkit-progress-bar {
+  background: #eee;
+  border-radius: 100px;
+  -webkit-transition : width 0.5s ease;
+}
+
+progress::-webkit-progress-value {
+	-webkit-transition : width 0.5s ease;
+  border-radius: 100px;
+  background-image:
+	   -webkit-linear-gradient(-45deg, 
+	                           transparent 33%, rgba(0, 0, 0, .1) 33%, 
+	                           rgba(0,0, 0, .1) 66%, transparent 66%),
+	   -webkit-linear-gradient(top, 
+	                           rgba(255, 255, 255, .25), 
+	                           rgba(0, 0, 0, .25)),
+	   -webkit-linear-gradient(left, #09c, #f44)
+}
+
 #blur {
   background-size: cover;
   overflow: hidden;
@@ -62,62 +104,97 @@
 	background-color:#FFFFFF;
 }
 
-.onoffswitch {
-    position: relative; width: 90px;
-    -webkit-user-select:none; -moz-user-select:none; -ms-user-select: none;
+
+.switch-label {
+	position: relative;
+	top: 4%;
+	left: 5%
+	font-family: "Arial";
+	font-size: 20px;
 }
-.onoffswitch-checkbox {
-    display: none;
+
+/* The switch - the box around the slider */
+.switch {
+  position: relative;
+  display: inline-block;
+  width: 60px;
+  height: 34px;
 }
-.onoffswitch-label {
-    display: block; overflow: hidden; cursor: pointer;
-    border: 2px solid #999999; border-radius: 20px;
+
+/* Hide default HTML checkbox */
+.switch input {
+  opacity: 0;
+  width: 0;
+  height: 0;
 }
-.onoffswitch-inner {
-    display: block; width: 200%; margin-left: -100%;
-    transition: margin 0.3s ease-in 0s;
+
+/* The slider */
+.slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #ccc;
+  -webkit-transition: .4s;
+  transition: .4s;
 }
-.onoffswitch-inner:before, .onoffswitch-inner:after {
-    display: block; float: left; width: 50%; height: 30px; padding: 0; line-height: 30px;
-    font-size: 14px; color: white; font-family: Trebuchet, Arial, sans-serif; font-weight: bold;
-    box-sizing: border-box;
+
+.slider:before {
+  position: absolute;
+  content: "";
+  height: 26px;
+  width: 26px;
+  left: 4px;
+  bottom: 4px;
+  background-color: white;
+  -webkit-transition: .4s;
+  transition: .4s;
 }
-.onoffswitch-inner:before {
-    content: "ON";
-    padding-left: 10px;
-    background-color: #34A7C1; color: #FFFFFF;
+
+#one:checked + .slider {
+  background-color: #FF0000;
 }
-.onoffswitch-inner:after {
-    content: "OFF";
-    padding-right: 10px;
-    background-color: #EEEEEE; color: #999999;
-    text-align: right;
+
+#one:focus + .slider {
+  box-shadow: 0 0 1px #FF0000;
 }
-.onoffswitch-switch {
-    display: block; width: 18px; margin: 6px;
-    background: #FFFFFF;
-    position: absolute; top: 0; bottom: 0;
-    right: 56px;
-    border: 2px solid #999999; border-radius: 20px;
-    transition: all 0.3s ease-in 0s; 
+input:checked + .slider {
+  background-color: #FF0000;
 }
-.onoffswitch-checkbox:checked + .onoffswitch-label .onoffswitch-inner {
-    margin-left: 0;
+
+input:focus + .slider {
+  box-shadow: 0 0 1px #FF0000;
 }
-.onoffswitch-checkbox:checked + .onoffswitch-label .onoffswitch-switch {
-    right: 0px; 
+
+input:checked + .slider:before {
+  -webkit-transform: translateX(26px);
+  -ms-transform: translateX(26px);
+  transform: translateX(26px);
+}
+
+/* Rounded sliders */
+.slider.round {
+  border-radius: 34px;
+}
+
+.slider.round:before {
+  border-radius: 50%;
 }
 
 </style>
 <script type="text/javascript">
 	var global_map;
 	var infowindow = null;
+	var total = 10;
 	
 	function changeCheckboxDiv()
 	{
 		var div = document.getElementById('floating-panel');
 		var btn = document.getElementById('minimize');
 		var blur = document.getElementById('blur');
+		var bar = document.getElementById('load-bar');
 		
 		if (btn.value == '-')
 		{
@@ -129,7 +206,7 @@
 			div.style.transition = "all 0.5s";
 			blur.style.transition = "all 0.5s";
 			div.style.height = "3.5%";
-			div.style.width = "4%";
+			div.style.width = "5%";
 			div.style.border = "solid transparent";
 			div.style.overflow = "hidden";
 			blur.style.height = "0%";
@@ -150,10 +227,43 @@
 			div.style.overflow = "auto";
 			blur.style.width = "16%";
 			blur.style.height = "63%";
+			bar.value += 10;
 		}
-		
 	}
+	
+	function initializeHTML()
+	{
+	
+		var elems = document.getElementById('floating-panel').children;
+		/*
+		for (var i = 0; i < elems.length; i++)
+		{
+			if (elems[i].className == "switch")
+			{
+				var input = elems[i].children[0];
+			}
+			
+		}
+		*/
+		var div = document.getElementById('floating-panel');
+		var label = document.createElement('label');
+			label.setAttribute('class', 'switch-label');
+			label.textContent = "nope";
+			
+		var style = document.createElement('style');
+			style.type = 'text/css';
+			style.innerHTML = '#two:checked + .slider { background-color: #0000FF; }';
+		var style2 = document.createElement('style');
+			style2.type = 'text/css';
+			style2.innerHTML = '#two:focus + .slider { box-shadow: 0 0 1px #0000FF; }';
+		document.getElementsByTagName('head')[0].appendChild(style);
+		document.getElementsByTagName('head')[0].appendChild(style2);
+		//div.appendChild(label);
+	}
+	
+	
 	function initialize() {
+		var bar = document.getElementById('load-bar');
 		var centerlatlng = new google.maps.LatLng(37.090240, -95.712891);
 		var myOptions = {
 			zoom: 4,
@@ -172,11 +282,12 @@
 		});
 		marker.setMap(map);
 		marker.addListener('click', this.get_title);
+		
 
 		var latlng = new google.maps.LatLng(40.745152, -73.992778);
 		var img = new google.maps.MarkerImage('C:\\Users\\mkennedy2\\AppData\\Local\\Programs\\Python\\Python37\\lib\\site-packages\\gmplot\\markers\\6495ED.png');
 		var marker = new google.maps.Marker({
-		title: "Tre Dici",
+		title: "Name: a" + "<br>" + "Show: b",
 		icon: img,
 		animation: google.maps.Animation.DROP,
 		position: latlng
@@ -238,6 +349,7 @@
 		});
 		marker.setMap(map);
 		marker.addListener('click', this.get_title);
+		
 
 		var latlng = new google.maps.LatLng(45.522067, -122.681875);
 		var img = new google.maps.MarkerImage('C:\\Users\\mkennedy2\\AppData\\Local\\Programs\\Python\\Python37\\lib\\site-packages\\gmplot\\markers\\6495ED.png');
@@ -271,6 +383,7 @@
 		});
 		marker.setMap(map);
 		marker.addListener('click', this.get_title);
+		
 
 		var latlng = new google.maps.LatLng(30.268172, -97.741042);
 		var img = new google.maps.MarkerImage('C:\\Users\\mkennedy2\\AppData\\Local\\Programs\\Python\\Python37\\lib\\site-packages\\gmplot\\markers\\6495ED.png');
@@ -304,6 +417,7 @@
 		});
 		marker.setMap(map);
 		marker.addListener('click', this.get_title);
+		
 
 		var latlng = new google.maps.LatLng(39.966860, -75.139260);
 		var img = new google.maps.MarkerImage('C:\\Users\\mkennedy2\\AppData\\Local\\Programs\\Python\\Python37\\lib\\site-packages\\gmplot\\markers\\6495ED.png');
@@ -326,6 +440,7 @@
 		});
 		marker.setMap(map);
 		marker.addListener('click', this.get_title);
+		
 
 		var latlng = new google.maps.LatLng(39.952676, -75.173802);
 		var img = new google.maps.MarkerImage('C:\\Users\\mkennedy2\\AppData\\Local\\Programs\\Python\\Python37\\lib\\site-packages\\gmplot\\markers\\6495ED.png');
@@ -359,6 +474,7 @@
 		});
 		marker.setMap(map);
 		marker.addListener('click', this.get_title);
+		
 
 		var latlng = new google.maps.LatLng(43.053959, -87.891572);
 		var img = new google.maps.MarkerImage('C:\\Users\\mkennedy2\\AppData\\Local\\Programs\\Python\\Python37\\lib\\site-packages\\gmplot\\markers\\6495ED.png');
@@ -436,6 +552,7 @@
 		});
 		marker.setMap(map);
 		marker.addListener('click', this.get_title);
+		
 
 		var latlng = new google.maps.LatLng(33.787968, -84.325978);
 		var img = new google.maps.MarkerImage('C:\\Users\\mkennedy2\\AppData\\Local\\Programs\\Python\\Python37\\lib\\site-packages\\gmplot\\markers\\6495ED.png');
@@ -502,6 +619,7 @@
 		});
 		marker.setMap(map);
 		marker.addListener('click', this.get_title);
+		
 
 		var latlng = new google.maps.LatLng(36.150776, -86.802206);
 		var img = new google.maps.MarkerImage('C:\\Users\\mkennedy2\\AppData\\Local\\Programs\\Python\\Python37\\lib\\site-packages\\gmplot\\markers\\6495ED.png');
@@ -557,6 +675,7 @@
 		});
 		marker.setMap(map);
 		marker.addListener('click', this.get_title);
+		
 
 		var latlng = new google.maps.LatLng(40.734666, -73.988767);
 		var img = new google.maps.MarkerImage('C:\\Users\\mkennedy2\\AppData\\Local\\Programs\\Python\\Python37\\lib\\site-packages\\gmplot\\markers\\6495ED.png');
@@ -667,6 +786,7 @@
 		});
 		marker.setMap(map);
 		marker.addListener('click', this.get_title);
+		
 
 		var latlng = new google.maps.LatLng(37.778825, -122.394029);
 		var img = new google.maps.MarkerImage('C:\\Users\\mkennedy2\\AppData\\Local\\Programs\\Python\\Python37\\lib\\site-packages\\gmplot\\markers\\6495ED.png');
@@ -810,6 +930,9 @@
 		});
 		marker.setMap(map);
 		marker.addListener('click', this.get_title);
+		
+		initializeHTML();
+		setProgress();
 	}
 	
 	function get_title(evt)
@@ -834,23 +957,20 @@
 		<div id="floating-panel" class="resizable">
 			<input id="minimize" type="button" value="-" onclick="changeCheckboxDiv()"><br><br>
 			
-			<div class="onoffswitch">
-				<input type="checkbox" name="onoffswitch" class="onoffswitch-checkbox" id="myonoffswitch" checked>
-				<label class="onoffswitch-label" for="myonoffswitch">
-					<span class="onoffswitch-inner"></span>
-					<span class="onoffswitch-switch"></span>
-				</label>
-			</div><br>
+			<label class="switch">
+			  <input type="checkbox" id="one">
+			  <span class="slider round"></span>
+			</label>
+			<label class="switch-label">hi</label><br><br>
 			
-			<div class="onoffswitch">
-				<input type="checkbox" name="onoffswitch" class="onoffswitch-checkbox" id="myonoffswitch2" checked>
-				<label class="onoffswitch-label" for="myonoffswitch2">
-					<span class="onoffswitch-inner"></span>
-					<span class="onoffswitch-switch"></span>
-				</label>
-			</div>
-			hi
+			<!-- Rounded switch -->
+			<label class="switch">
+			  <input type="checkbox" id="two">
+			  <span class="slider round"></span>
+			</label>
+			<label class="switch-label">hi</label>
 		</div>
+		<progress color="#8ccc62" max="100" value="0" aria-valuemax="100" aria-valuemin="0" aria-valuenow="75" tabindex="-1" id="load-bar"></progress>
 	</div>
 	
 </body>
