Added example picture

--- a/flavortown.html
+++ b/flavortown.html
@@ -87,7 +87,7 @@ progress::-webkit-progress-value {
 	text-align:center;
 	transition: all 0.3s;
 	position:absolute;
-    top:0;
+    top:0;w
     right:0;
 	width: 60px;
 	height: 30px;
